--- a/dashboard-ui/src/components/share.scss
+++ b/dashboard-ui/src/components/share.scss
@@ -13,7 +13,7 @@
   }
 
   .homeText {
-    font-family: "Open Sans";
+    font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     line-height: 45px;
     float: right;
