--- a/dashboard-ui/src/layouts/layout.css
+++ b/dashboard-ui/src/layouts/layout.css
@@ -1,5 +1,5 @@
 .app {
-  font-family: "Open Sans"; }
+  font-family: 'Open Sans', sans-serif; }
   .app .header {
     height: 80px;
     border-bottom: 3px solid #fbfbfb; }
