--- a/dashboard-ui/src/index.css
+++ b/dashboard-ui/src/index.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 body , html{
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   width: 100%;
   height: 100%;
 }
