--- a/dashboard-ui/src/components/share.scss
+++ b/dashboard-ui/src/components/share.scss
@@ -2,6 +2,10 @@
   float: right;
   margin-top: 18px;
   margin-right: 15px;
+  @media screen and (max-width: 767px){
+    margin-right: 5px;
+    padding-right: 5px;
+  }
 
   .homeButton {
     cursor: pointer;
@@ -19,6 +23,9 @@
     float: right;
     color: #337535;
     margin-right: 15px;
+    @media screen and (max-width: 1024px){
+      display:none;
+    }
   }
     border-right: 1px solid #EEE;
 }
