--- a/dashboard-ui/src/routes/dashboard/routes/report/report.css
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.css
@@ -24,6 +24,9 @@
   margin: 0 5%;
   overflow: hidden;
   width: 90%; }
+  .download.full {
+    border-bottom: 3px solid #eeeeee;
+    padding-bottom: 30px; }
   .download a {
     color: #668DAA;
     font-size: 11px;
@@ -150,10 +153,8 @@
 
 .population-box {
   font-weight: bold;
-  border-bottom: 3px solid #eeeeee;
   width: 90%;
-  margin: 30px 5%;
-  padding-bottom: 30px; }
+  margin: 30px 5%; }
   .population-box > div {
     display: inline-block;
     width: 50%;
@@ -586,6 +587,10 @@
   padding-left: 30px; }
   .chart-legends > div {
     display: inline-block; }
+  .chart-legends .legend-group {
+    display: blok;
+    float: left;
+    margin-right: 30px; }
   .chart-legends .legend-color {
     width: 16px;
     height: 16px; }
