--- a/dashboard-ui/src/routes/dashboard/routes/report/report.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.scss
@@ -28,6 +28,10 @@
 	margin: 0 5%;
 	overflow: hidden;
 	width: 90%;
+	&.full{
+		border-bottom: 3px solid #eeeeee;
+		padding-bottom: 30px;
+	}
 	a {
 		color: #668DAA;
 		font-size: 11px;
@@ -187,10 +191,8 @@
 
 .population-box {
 	font-weight: bold;
-	border-bottom: 3px solid #eeeeee;
 	width:90%;
 	margin: 30px 5%;
-	padding-bottom: 30px;
 
 	> div {
 		display: inline-block;
@@ -788,6 +790,11 @@
 	padding-left: 30px;
 	>div{
 		display: inline-block;
+	}
+	.legend-group{
+		display: blok;
+		float: left; 
+		margin-right: 30px;
 	}
 	.legend-color{
 		width: 16px;
