--- a/dashboard-ui/src/routes/dashboard/routes/report/report.css
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.css
@@ -584,22 +584,29 @@
   pointer-events: none !important; }
 
 .chart-legends {
-  padding-left: 30px; }
+  padding-left: 30px;
+  overflow: hidden; }
   .chart-legends > div {
     display: inline-block; }
-  .chart-legends .legend-group {
-    display: blok;
-    float: left;
-    margin-right: 30px; }
   .chart-legends .legend-color {
     width: 16px;
     height: 16px; }
+  .chart-legends .legend-group {
+    display: block;
+    float: left;
+    width: 33%; }
+    .chart-legends .legend-group .legend-sub-group {
+      float: left;
+      width: 45%; }
+      .chart-legends .legend-group .legend-sub-group .legend-color {
+        float: left;
+        margin-right: 8px; }
   .chart-legends .legend-label {
-    padding: 0px 20px 0px 5px;
+    padding: 0px 10px 0px 5px;
     font-size: 12px;
     height: 16px;
     color: #444444;
-    line-height: 10px;
+    line-height: 15px;
     vertical-align: middle; }
 
 .infolayer text {
