--- a/dashboard-ui/src/routes/dashboard/routes/report/report.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.scss
@@ -799,23 +799,24 @@
 	.legend-group{
 		display: block;
 		float: left; 
-		width: 33%;
+		width: 30%;
 		.legend-sub-group{
 			float: left;
-			width: 45%;
 			.legend-color{
 				float: left;
-				margin-right: 8px;
+				margin-right: 5px;
 			}
 		}
 	}
 	.legend-label{
-		padding: 0px 10px 0px 5px;
+			padding: 0 10px 0 0;
+			float: left;
 	    font-size: 12px;
 	    height: 16px;
 	    color: rgb(68, 68, 68);
 	    line-height: 15px;
 	    vertical-align: middle;
+			margin-right: 10px;
 	}
 }
 
