--- a/dashboard-ui/src/routes/dashboard/routes/generator/generator.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/generator/generator.scss
@@ -215,6 +215,9 @@
           font-size: 12px;
           margin-left: 5px;
 					text-indent: 30px;
+					@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
+						background-image: none;
+					}
         }
         .dropdown-title{
         	font-size: 13px;
