--- a/dashboard-ui/src/routes/dashboard/routes/report/report.css
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.css
@@ -15,7 +15,9 @@
   display: inline-block; }
   @media screen and (max-width: 1024px) {
     .sub-title {
-      font-size: 17px; } }
+      font-size: 17px;
+      margin-bottom: 30px;
+      overflow: hidden; } }
 
 .download {
   display: block;
@@ -97,6 +99,9 @@
   width: 90%;
   padding-left: 5%;
   padding-right: 5%; }
+  @media screen and (max-width: 767px) {
+    .report-header {
+      font-size: 22px; } }
   .report-header > div {
     display: inline-block; }
   .report-header .download {
@@ -109,6 +114,9 @@
       display: inline-block;
       line-height: 1px;
       border-right: 1px solid #CCC; }
+      @media screen and (max-width: 767px) {
+        .report-header .period-selector-container > div > div {
+          border-right: none; } }
       .report-header .period-selector-container > div > div select {
         padding-left: 12px;
         width: 200px;
@@ -126,15 +134,26 @@
   background-color: #F4F2EC;
   border-top: 2px solid #d9d9d9;
   border-bottom: 2px solid #d9d9d9; }
+  @media screen and (max-width: 767px) {
+    .location-box > div {
+      width: calc(45% + 1px) !important;
+      border-top: none;
+      border-bottom: none; } }
 
 .location-box > div:not(:last-child) {
   border-right: 2px solid #d9d9d9; }
+  @media screen and (max-width: 767px) {
+    .location-box > div:not(:last-child) {
+      border-right: none; } }
 
 .location-box div {
   display: inline-block;
   line-height: 40px;
   text-align: center;
   color: #2C4856; }
+  @media screen and (max-width: 767px) {
+    .location-box div {
+      line-height: 120%; } }
 
 .location-box .location-title {
   padding: 10px;
@@ -143,13 +162,29 @@
   @media screen and (max-width: 1024px) {
     .location-box .location-title {
       display: block; } }
+  @media screen and (max-width: 767px) {
+    .location-box .location-title {
+      font-size: 14px;
+      line-height: 120%;
+      padding: 10px 10px 0 10px; } }
 
 .location-box .location-value {
   width: 60% !important;
-  font-weight: bold; }
+  font-weight: bold;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: block;
+  float: right;
+  margin-top: 10px;
+  padding-right: 10px; }
   @media screen and (max-width: 1024px) {
     .location-box .location-value {
       font-size: 17px; } }
+  @media screen and (max-width: 767px) {
+    .location-box .location-value {
+      font-size: 14px;
+      line-height: 120%; } }
 
 .population-box {
   font-weight: bold;
@@ -170,6 +205,9 @@
     color: #2C4856;
     font-size: 20px;
     font-weight: bold; }
+    @media screen and (max-width: 767px) {
+      .population-box .total-pop {
+        font-size: 17px; } }
     .population-box .total-pop span {
       font-size: 30px; }
   .population-box .value-label {
@@ -225,6 +263,7 @@
           font-size: 16px; }
 
 .top-ten-deseases {
+  padding-bottom: 30px;
   padding-top: 30px;
   font-weight: bold;
   border-bottom: 3px solid #eeeeee;
@@ -239,6 +278,10 @@
   .top-ten-deseases .top-ten-diagnosis-table {
     font-size: 18px;
     padding-top: 10px; }
+    @media screen and (max-width: 767px) {
+      .top-ten-deseases .top-ten-diagnosis-table {
+        font-size: 13px;
+        overflow: hidden; } }
     .top-ten-deseases .top-ten-diagnosis-table .sub-title {
       margin-bottom: 30px; }
     .top-ten-deseases .top-ten-diagnosis-table table {
@@ -274,21 +317,33 @@
       color: #967f63;
       font-size: 14px;
       border-bottom: 2px solid #eeeeee; }
+      @media screen and (max-width: 767px) {
+        .top-ten-deseases .top-ten-diagnosis-table .previous-period-sub-header {
+          font-size: 12px; } }
     .top-ten-deseases .top-ten-diagnosis-table .previous-period-sub-header-partial {
       color: #967f63;
       font-size: 14px;
       border-bottom: 2px solid #eeeeee;
       background-color: #ffffff; }
+      @media screen and (max-width: 767px) {
+        .top-ten-deseases .top-ten-diagnosis-table .previous-period-sub-header-partial {
+          font-size: 12px; } }
     .top-ten-deseases .top-ten-diagnosis-table .current-period-sub-header-partial {
       color: #967f63;
       font-size: 14px;
       background-color: #F4F2EC;
       border-bottom: 2px solid #eeeeee; }
+      @media screen and (max-width: 767px) {
+        .top-ten-deseases .top-ten-diagnosis-table .current-period-sub-header-partial {
+          font-size: 12px; } }
     .top-ten-deseases .top-ten-diagnosis-table .current-period-sub-header {
       color: #967f63;
       font-size: 14px;
       background-color: #F4F2EC;
       border-bottom: 2px solid #eeeeee; }
+      @media screen and (max-width: 767px) {
+        .top-ten-deseases .top-ten-diagnosis-table .current-period-sub-header {
+          font-size: 12px; } }
     .top-ten-deseases .top-ten-diagnosis-table .desease-name {
       text-align: left;
       color: #5b5b5b; }
@@ -316,6 +371,7 @@
   margin-right: 15px; }
 
 .RMNCH-box {
+  padding-bottom: 30px;
   padding-top: 80px;
   font-weight: bold;
   border-bottom: 3px solid #eeeeee;
@@ -328,6 +384,9 @@
     width: 100%; }
   .RMNCH-box .RMNCH-table {
     font-size: 18px; }
+    @media screen and (max-width: 767px) {
+      .RMNCH-box .RMNCH-table {
+        font-size: 12px; } }
     .RMNCH-box .RMNCH-table .sub-title {
       padding: 20px 10px 10px 0; }
     .RMNCH-box .RMNCH-table table {
@@ -357,16 +416,25 @@
       color: #967f63;
       font-size: 14px;
       border-bottom: 2px solid #eeeeee; }
+      @media screen and (max-width: 767px) {
+        .RMNCH-box .RMNCH-table .previous-period-sub-header {
+          font-size: 12px; } }
     .RMNCH-box .RMNCH-table .current-period-sub-header-partial {
       color: #B4B5A8;
       font-size: 14px;
       background-color: #F4F2EC;
       border-bottom: 2px solid #eeeeee; }
+      @media screen and (max-width: 767px) {
+        .RMNCH-box .RMNCH-table .current-period-sub-header-partial {
+          font-size: 12px; } }
     .RMNCH-box .RMNCH-table .current-period-sub-header {
       color: #967f63;
       font-size: 14px;
       background-color: #F4F2EC;
       border-bottom: 2px solid #eeeeee; }
+      @media screen and (max-width: 767px) {
+        .RMNCH-box .RMNCH-table .current-period-sub-header {
+          font-size: 12px; } }
     .RMNCH-box .RMNCH-table .desease-name {
       text-align: left;
       color: #5b5b5b; }
@@ -393,6 +461,9 @@
     font-weight: bold;
     display: inline-block;
     padding: 20px; }
+    @media screen and (max-width: 767px) {
+      .deaths-box .total-pop {
+        font-size: 17px; } }
     .deaths-box .total-pop span {
       font-size: 30px; }
   .deaths-box .value-item {
@@ -515,7 +586,12 @@
     width: calc(33% + 2px) !important; }
     @media screen and (max-width: 1024px) {
       .ward-report-container .location-box > div {
-        width: calc(33% + 1px) !important; } }
+        line-height: 120%;
+        width: calc(33% + 1px) !important;
+        font-size: 14px; } }
+    @media screen and (max-width: 767px) {
+      .ward-report-container .location-box > div {
+        width: calc(45% + 1px) !important; } }
 
 .backButton {
   float: right;
@@ -584,13 +660,17 @@
   pointer-events: none !important; }
 
 .chart-legends {
-  padding-left: 30px;
-  overflow: hidden; }
+  margin-bottom: 20px;
+  margin-top: 20px;
+  overflow: hidden;
+  padding-left: 30px; }
   .chart-legends > div {
     display: inline-block; }
   .chart-legends .legend-color {
     width: 16px;
-    height: 16px; }
+    height: 16px;
+    float: left;
+    margin-right: 5px; }
   .chart-legends .legend-group {
     display: block;
     float: left;
