--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
@@ -67,12 +67,14 @@
           margin-bottom: 10px;
           margin-top: 10px;
           margin-left: 5%;
-          padding-left: 0;
+          padding-left: 30px;
+          padding-right:30px;
+          width:80%;
         }
         @media screen and (max-width: 767px){
           margin-left:0;
           padding: 20px;
-          width: 90%;
+          width: 80%;
         }
         &.first{
           margin-left: 0;
