--- a/dashboard-ui/src/routes/dashboard/routes/generator/components/textSearch.css
+++ b/dashboard-ui/src/routes/dashboard/routes/generator/components/textSearch.css
@@ -119,6 +119,9 @@ body {
       vertical-align: middle; }
   .text-search-container input {
     border: none; }
+    @media screen and (max-width: 767px) {
+      .text-search-container input {
+        width: 90%; } }
   .text-search-container .generate-button-disabled {
     padding: 12px 35px;
     width: 150px;
