--- a/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/landing/landing.scss
@@ -38,6 +38,10 @@
   		font-size: 25px;
   	    color: #b59666;
   	    margin-bottom: 50px;
+        @media screen and (max-width: 767px){
+          font-size: 22px;
+          width:90%;
+        }
   	}
     .button-description{
       margin-bottom: -5px;
@@ -72,6 +76,7 @@
           width:80%;
         }
         @media screen and (max-width: 767px){
+          height: 150px;
           margin-left:0;
           padding: 20px;
           width: 80%;
@@ -172,6 +177,10 @@
   			padding-left: 45px;
   		    color: #2C4856;
   		    font-size: 20px;
+          @media screen and (max-width: 767px){
+            font-size:16px;
+            width:70%;
+          }
   		}
   	}
   }
