--- a/dashboard-ui/src/routes/dashboard/routes/report/report.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/report/report.scss
@@ -3,6 +3,9 @@
 	margin: auto;
 	overflow-x: auto;
 	width: 100%;
+	@media screen and (max-width: 767px){
+		padding-top: 105px;
+	}
 	.location-box{
 		@media screen and (max-width: 1024px){
 			margin-top: 20px;
@@ -20,6 +23,9 @@
 			font-size: 17px;
 			margin-bottom: 30px;
 			overflow: hidden;
+		}
+		@media screen and (max-width: 767px){
+			margin-bottom: 0;
 		}
 }
 
@@ -116,18 +122,14 @@
 	padding-left: 5%;
 	padding-right: 5%;
 	@media screen and (max-width: 767px){
-		font-size: 22px;
+		font-size: 20px;
+		float: left;
 	}
 
 	> div {
 		display: inline-block;
 	}
 
-	.facility-name {}
-
-	.download {
-		border: 1px solid red;
-	}
 
 	.period-selector-container {
 		float: right;
@@ -167,9 +169,10 @@
 		border-top: 2px solid #d9d9d9;
 		border-bottom: 2px solid #d9d9d9;
 		@media screen and (max-width: 767px){
-			width: calc(45% + 1px) !important;
+			width: 50% !important;
 			border-top: none;
 			border-bottom: none;
+			margin-bottom: 5px;
 		}
 	}
 
@@ -255,12 +258,16 @@
 		color: #2C4856;
 		font-size: 20px;
 		font-weight: bold;
+		text-transform: capitalize;
 		@media screen and (max-width: 767px){
 			font-size: 17px;
 		}
 
 		span {
 			font-size: 30px;
+			@media screen and (max-width: 767px){
+				display:block;
+			}
 		}
 	}
 	.value-label{
@@ -274,10 +281,18 @@
 		margin-right:10px;
 		margin-bottom: 10px;
 		width:15%;
+		@media screen and (max-width: 767px){
+			float: left;
+			width: 17%;
+		}
+		
 
 		div:first-child {
 			font-size: 14px;
 			color: #B4B5A8;
+			@media screen and (max-width: 767px){
+				font-size: 12px;
+			}
 		}
 
 		div:last-child {
@@ -351,6 +366,9 @@
 	
 	.sub-title{
 		padding: 20px 10px 10px 0;
+				@media screen and (max-width: 767px){
+					margin-bottom: 30px;
+				}
 	}
 	
 	.download{
@@ -493,6 +511,10 @@
     color: #2c4856;
     word-spacing: 5px;
     margin-right: 15px;
+		@media screen and (max-width: 767px){
+			margin-top: 20px;
+			margin-bottom: 20px;
+		}
 }
 
 
@@ -505,6 +527,15 @@
 	margin-left: 5%;
 	margin-right:5%;
 	width: 90%;
+	@media screen and (max-width: 767px){
+		padding-top: 30px;
+	}
+	
+	.sub-title{
+		@media screen and (max-width: 767px){
+			margin-bottom: 30px;
+		}
+	}
 
 	.download{
 		margin:-30px 0 0 0;
@@ -624,10 +655,10 @@
 		font-weight: bold;
 		display: inline-block;
 		padding: 20px;
+		text-transform: capitalize;
 		@media screen and (max-width: 767px){
 			font-size: 17px;
 		}
-
 		span {
 			font-size: 30px;
 		}
@@ -643,6 +674,9 @@
 		div:first-child {
 			font-size: 14px;
 			color: #B4B5A8;
+			@media screen and (max-width: 767px){
+				font-size: 12px;
+			}
 		}
 
 		div:last-child {
@@ -775,6 +809,9 @@
 	margin: auto;
 	overflow-x: auto;
 	width: 100%;
+	@media screen and (max-width: 767px){
+		padding-top: 105px;
+	}
 
 	.location-box {
 		@media screen and (max-width: 1024px){
@@ -805,6 +842,9 @@
   width: 25px;
   padding: 15px 10px;
   cursor: pointer;
+	@media screen and (max-width: 767px){
+	}
+
 }
 
 .print-icon{
@@ -818,6 +858,8 @@
   width: 25px;
   padding: 15px 10px;
   cursor: pointer;
+	@media screen and (max-width: 767px){
+	}
 }
 
 .copy-link-icon{
@@ -831,6 +873,8 @@
   width: 25px;
   padding: 15px 10px;
   cursor: pointer;
+	@media screen and (max-width: 767px){
+	}
 }
 
 .copy-link-icon.copied{
@@ -915,6 +959,12 @@
 		font-size: 11px !important;
     	fill: rgb(68, 68, 68) !important;
     	font-weight: bold !important;
+			@media screen and (max-width: 1024px){
+				font-size: 9px !important;
+			}
+			@media screen and (max-width: 767px){
+				display:none;
+			}
 	}
 }
 
@@ -923,5 +973,11 @@
 		font-size: 11px !important;
     	fill: rgb(68, 68, 68) !important;
     	font-weight: bold !important;
+			@media screen and (max-width: 1024px){
+				font-size: 9px !important;
+			}
+			  @media screen and (max-width: 767px){
+					display:none;
+				}
 	}
 }
