--- a/dashboard-ui/src/routes/dashboard/routes/generator/generator.scss
+++ b/dashboard-ui/src/routes/dashboard/routes/generator/generator.scss
@@ -9,7 +9,7 @@
 	    align-items: center;
 	    margin: auto;
 			@media screen and (max-width: 1024px){
-				width: 100%;
+				width: 90%;
 				padding: 20px;
 				overflow-x: hidden;
 			}
@@ -102,7 +102,7 @@
 			  @media screen and (max-width: 1024px){
 					height: auto;
 					margin: 0;
-					width: 90%;
+					width: 100%;
 				}
 				
 		>div{
@@ -204,7 +204,7 @@
 		height: 586px;
 		border: 2px solid #eeeeee;
 		  @media screen and (max-width: 1024px){
-				width: 90%;
+				width: 100%;
 			}
 		>div{
 			padding: 12px 35px;
@@ -359,6 +359,9 @@
 		display: inline-block;
 		@media screen and (max-width: 1024px){
 			width: 100%;
+		}
+		@media screen and (max-width: 676px){
+			width: 96%;
 		}
 	}
 	.step-two-box{
